commit all the neccessary files for running and compiling also the example testcase for testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,11 @@
     "cSpell.words": [
         "FUNTION",
         "Minh",
+        "prepresent",
         "pwds",
         "Testcase",
-        "Tien"
-    ]
+        "Tien",
+        "Waston"
+    ],
+    //"C_Cpp.errorSquiggles": "disabled"
 }
